Enhance Localization and UI for Payment and Cart Features
- Added new localized strings for payment-related messages in English and Hebrew.
- Updated UI components across various screens to utilize localized strings, improving user experience.
- Refactored theme settings to adjust shadow color for better visual consistency.
- Removed unnecessary debug print statements in CartProvider to streamline code.
- Enhanced error handling in payment and cart functionalities to provide clearer feedback to users.

--- a/projects/global_marketplace_app/lib/l10n/app_en.arb
+++ b/projects/global_marketplace_app/lib/l10n/app_en.arb
@@ -227,5 +227,39 @@
   "confirmLogout": "Are you sure you want to logout?",
   "@confirmLogout": {
     "description": "Logout confirmation message"
-  }
-} 
+  },
+  "paymentScreenTitle": "Payment",
+  "addNewPaymentMethod": "Add New Payment Method",
+  "orderConfirmed": "Order Confirmed",
+  "orderPlacedSuccessfully": "Order Placed Successfully!",
+  "errorPlacingOrder": "Error placing order: {error}",
+  "anErrorOccurred": "An error occurred: {error}",
+  "paymentMethodDisplay": "{brand} ending in {last4}",
+  "storePageTitle": "Store Page",
+  "errorLoading": "Error: {error}",
+  "storeNotFound": "Store not found",
+  "featuredProducts": "Featured Products",
+  "allProducts": "All Products",
+  "noCategoriesAvailable": "No categories available",
+  "noProductsAvailable": "No products available",
+  "noStoresAvailable": "No stores available",
+  "all": "All",
+  "product": "Product",
+  "noProductDataFound": "No product data found.",
+  "noDescriptionAvailable": "No description available.",
+  "productAddedToCart": "Product added to cart!",
+  "pleaseLogInToAdd": "Please log in to add items to your cart",
+  "shoppingCart": "Shopping Cart",
+  "failedToLoadCart": "Failed to load cart: {error}",
+  "yourCartIsEmpty": "Your Cart is Empty.",
+  "subtotal": "Subtotal: ${subtotal}",
+  "proceedToCheckout": "Proceed to Checkout",
+  "continueButton": "Continue",
+  "noSavedAddressesFound": "No saved addresses found.",
+  "youAreNotLoggedIn": "You are not logged in.",
+  "failedToLoadAddresses": "Failed to load addresses: {statusCode}",
+  "continueToPayment": "Continue to Payment",
+  "addPaymentMethod": "Add Payment Method",
+  "failedToAddPaymentMethod": "Failed to add payment method.",
+  "shippingMethod": "Shipping Method"
+}
