--- a/projects/global_marketplace_app/lib/l10n/app_he.arb
+++ b/projects/global_marketplace_app/lib/l10n/app_he.arb
@@ -56,5 +56,39 @@
   "emptyCart": "עגלת הקניות שלך ריקה",
   "continueShopping": "המשך לקנות",
   "logout": "התנתק",
-  "confirmLogout": "האם אתה בטוח שברצונך להתנתק?"
-} 
+  "confirmLogout": "האם אתה בטוח שברצונך להתנתק?",
+  "paymentScreenTitle": "תשלום",
+  "addNewPaymentMethod": "הוסף אמצעי תשלום חדש",
+  "orderConfirmed": "ההזמנה אושרה",
+  "orderPlacedSuccessfully": "ההזמנה בוצעה בהצלחה!",
+  "errorPlacingOrder": "שגיאה בביצוע ההזמנה: {error}",
+  "anErrorOccurred": "אירעה שגיאה: {error}",
+  "paymentMethodDisplay": "{brand} המסתיים ב-{last4}",
+  "storePageTitle": "עמוד חנות",
+  "errorLoading": "שגיאה: {error}",
+  "storeNotFound": "החנות לא נמצאה",
+  "featuredProducts": "מוצרים מומלצים",
+  "allProducts": "כל המוצרים",
+  "noCategoriesAvailable": "אין קטגוריות זמינות",
+  "noProductsAvailable": "אין מוצרים זמינים",
+  "noStoresAvailable": "אין חנויות זמינות",
+  "all": "הכל",
+  "product": "מוצר",
+  "noProductDataFound": "לא נמצאו נתוני מוצר.",
+  "noDescriptionAvailable": "אין תיאור זמין.",
+  "productAddedToCart": "המוצר נוסף לעגלה!",
+  "pleaseLogInToAdd": "אנא התחבר כדי להוסיף פריטים לעגלה",
+  "shoppingCart": "עגלת קניות",
+  "failedToLoadCart": "נכשל בטעינת העגלה: {error}",
+  "yourCartIsEmpty": "העגלה שלך ריקה.",
+  "subtotal": "סכום ביניים: ${subtotal}",
+  "proceedToCheckout": "המשך לתשלום",
+  "continueButton": "המשך",
+  "noSavedAddressesFound": "לא נמצאו כתובות שמורות.",
+  "youAreNotLoggedIn": "אינך מחובר.",
+  "failedToLoadAddresses": "נכשל בטעינת הכתובות: {statusCode}",
+  "continueToPayment": "המשך לתשלום",
+  "addPaymentMethod": "הוסף אמצעי תשלום",
+  "failedToAddPaymentMethod": "נכשל בהוספת אמצעי התשלום.",
+  "shippingMethod": "שיטת משלוח"
+}
